force-app/main/default/objects/Work_Items_Setting__mdt/Work_Items_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Work Items Setting</label>
    <pluralLabel>Work Items Settings</pluralLabel>
</CustomObject>