force-app/main/default/objects/Work_Items_Setting__mdt/fields/Soft_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Soft_Due_Date__c</fullName>
    <label>Soft Due Date</label>
    <type>DateTime</type>
</CustomField>